[package]
name = "automerge-demo"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"

[dependencies]
vgtk = "0.2"
pretty_env_logger = "0.4"
automerge-backend = { path = "../../automerge-rs/automerge-backend" }
automerge-frontend = { path = "../../automerge-rs/automerge-frontend" }
automerge-protocol = { path = "../../automerge-rs/automerge-protocol" }
maplit = "1.0.2"
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
crossbeam = "0.7.3"
