[package]
name = "automerge-demo"
version = "0.1.0"
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2018"

[dependencies]
vgtk = "0.2"
pretty_env_logger = "0.4"
automerge-backend = { git = "https://github.com/automerge/automerge-rs.git" }
automerge-frontend = { git = "https://github.com/automerge/automerge-rs.git" }
automerge-protocol = { git = "https://github.com/automerge/automerge-rs.git" }
maplit = "1.0.2"
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
crossbeam = "0.7.3"
